Product list with cart, fix add to cart button appearance on Safari/Chrome

--- a/13-product-list-with-cart/product-list-with-cart-react/src/components/AddToCartButton.module.css
+++ b/13-product-list-with-cart/product-list-with-cart-react/src/components/AddToCartButton.module.css
@@ -41,3 +41,8 @@
     color: white;
     text-align: center;
 }
+
+.inputQuantity::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
